解决.idea不能添加到.gitignore问题

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-# 其他
-XXLocalPlatform/private_settings.py
-
 # pyCharm
-.idea/
+.idea
+
+# other
+XXLocalPlatform/private_settings.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
